Fix main menu button alignment

--- a/wp-content/themes/wprig-ucf-bands/assets/css/src/_main-menu.css
+++ b/wp-content/themes/wprig-ucf-bands/assets/css/src/_main-menu.css
@@ -14,6 +14,7 @@
 }
 
 .main-navigation {
+	display: grid;
 	font-family: var(--highlight-font-family);
 }
 
